<resources>
    <string name="app_name">DSCR15</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="entrar">ENTRAR</string>
    <string name="registro">REGISTRO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repetirPaswword">Repite tu password</string>
    <string name="crearCuenta">CREAR CUENTA</string>
    <string name="iniciarSesion">INICIAR SESIÓN</string>
    <string name="salir">SALIR</string>
    <string name="accesos">ACCESOS</string>
    <string name="infoAccessAcceso">Fecha</string>
    <string name="infoAccessValid">Es válido</string>
    <string name="usuario">Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="chats">Chats</string>
    <string name="inviteText">Invite someone to a chat</string>
    <string name="invite">Invite</string>
    <string name="enviar">Enviar</string>
    <string name="sugerenciaConversacion">Escribe aquí tu mensaje</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="borrarConversacion">Borrar conversación</string>
    <string name="title_activity_prueba">prueba</string>
    <string name="cuadroBuscarChat">Find a chat</string>
    <string name="BotonBuscarChat">FIND</string>
    <string name="informacionDelChat">Información del chat</string>
    <string name="fechaCreado">Fecha de creación</string>
    <string name="participantes">Participantes</string>
    <string name="buscarEnChat">Busca un mensaje</string>
    <string name="cancelar">Cancelar</string>
    <string name="miPerfil">My Profile</string>
    <string name="update">Update</string>
    <string name="modify">Modify</string>
    <string name="cambiarPassword">Change password</string>
    <string name="deleteAccount">Delete account</string>
    <string name="name">Name</string>
    <string name="profile">Profile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
