<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="false"
    android:layout_marginBottom="5dp"
    tools:context="es.unavarra.tlm.dscr_17_15.Pantallas.PantallaUsuarioLogueado">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:id="@+id/LayoutBuscarChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp">

            <EditText
                android:id="@+id/CuadroBuscarChat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/cuadroBuscarChat"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/BotonBuscarChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BotonBuscarChat" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/BotonCerrarSesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_weight="0"
                android:contentDescription=""
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                app:srcCompat="@drawable/session_close"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/CuadroInvitarChat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/inviteText"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/BotonInvitarChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/invite" />

        </LinearLayout>

        <TextView
            android:id="@+id/TextViewChats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chats"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:visibility="visible" />

        <ListView
            android:id="@+id/ListViewChats"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:divider="@null"
            android:dividerHeight="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/BotonFlotanteBuscarChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        android:clickable="true"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/ic_search_category_default" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/BotonFlotanteBuscarChatX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        android:clickable="true"
        android:visibility="gone"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/ic_delete" />

</RelativeLayout>
