<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.unavarra.tlm.dscr_17_15.Pantallas.PantallaConversacion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:backgroundTint="@android:color/holo_blue_light"
            android:backgroundTintMode="src_over"
            android:hapticFeedbackEnabled="false"
            android:orientation="horizontal"
            android:padding="5dp"
            android:textAlignment="center"
            android:visibility="visible"
            tools:targetApi="lollipop">

            <LinearLayout
                android:id="@+id/LayoutOtroPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="RelativeOverlap">

                <ImageView
                    android:id="@+id/ImagenPerfilConversacion"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:contentDescription=""
                    app:srcCompat="@mipmap/ic_launcher_round"
                    tools:ignore="ContentDescription,RtlSymmetry" />

                <TextView
                    android:id="@+id/NombreConversacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="60dp"
                    android:layout_marginStart="60dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    tools:ignore="RelativeOverlap" />
            </LinearLayout>

            <ImageView
                android:id="@+id/ImagenBuscarEnChat"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/BotonBuscarChat"
                app:srcCompat="@android:drawable/ic_search_category_default" />

            <ImageView
                android:id="@+id/ImagenBuscarEnChat2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/cancelar"
                android:visibility="gone"
                app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/LayoutBuscarEnChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <EditText
                android:id="@+id/TextoBuscarEnChat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/buscarEnChat"
                android:inputType="text" />

            <Button
                android:id="@+id/BotonBuscarEnChat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/BotonBuscarChat" />
        </LinearLayout>

        <ListView
            android:id="@+id/ListViewConversacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp"
            android:dividerHeight="0dp"
            android:divider="@null"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignEnd="@+id/ListViewConversacion"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="false"
        android:background="@android:color/white"
        android:orientation="horizontal"
        tools:ignore="NotSibling">

        <EditText
            android:id="@+id/TextoMensaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/sugerenciaConversacion"
            android:inputType="text" />

        <Button
            android:id="@+id/BotonEnviarMensaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enviar" />
    </LinearLayout>

</RelativeLayout>
